Changing operator settings of first inserted object removes linked background images added via drag and drop #47050

Closed
opened 2015-12-23 14:01:38 +01:00 by Kai Moschcau · 8 comments

System Information
Windows 10
GeForce GTX 770

Blender Version
Broken: 2.76b f337fea

Short description of error
Changing operator settings of first inserted object removes linked background images added via drag and drop

Exact steps for others to reproduce the error

  • open new Blend file
  • drag in image
  • add object
  • modify insertion operation parameters by either the menu or F6-pop-up
  • background image reference gets removed from the blend file
    In my testing it happened on multiple systems and there was no difference whether the blend file was saved after dragging in the image or not. Packing the image into the blend file did not lead to the error. Adding the background image via the background images menu also did not lead to the error to occur.
    error.blend
**System Information** Windows 10 GeForce GTX 770 **Blender Version** Broken: 2.76b f337fea **Short description of error** Changing operator settings of first inserted object removes linked background images added via drag and drop **Exact steps for others to reproduce the error** - open new Blend file - drag in image - add object - modify insertion operation parameters by either the menu or F6-pop-up - background image reference gets removed from the blend file In my testing it happened on multiple systems and there was no difference whether the blend file was saved after dragging in the image or not. Packing the image into the blend file did not lead to the error. Adding the background image via the background images menu also did not lead to the error to occur. [error.blend](https://archive.blender.org/developer/F270145/error.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @kmoschcau-3

Added subscriber: @kmoschcau-3

Added subscribers: @JulianEisel, @Sergey

Added subscribers: @JulianEisel, @Sergey

Seems we're missing undo pushes on drag-drop here.

@JulianEisel, something you're fine to get familiar with? ;)

Seems we're missing undo pushes on drag-drop here. @JulianEisel, something you're fine to get familiar with? ;)
C.G.Vedant self-assigned this 2016-01-05 18:35:33 +01:00
Member

@Chipe1, since you claimed the task: I got a fix for this ready since some days, just noted another issue that I wanted to look into more before committing. The fix for this bug itself is easy, good for beginners, so if you think you can fix it just go ahead. But if you don't find the solution, please mention that here and I'll commit.

@Chipe1, since you claimed the task: I got a fix for this ready since some days, just noted another issue that I wanted to look into more before committing. The fix for this bug itself is easy, good for beginners, so if you think you can fix it just go ahead. But if you don't find the solution, please mention that here and I'll commit.

@JulianEisel, thanks :D . I'll try to fix the bug.

@JulianEisel, thanks :D . I'll try to fix the bug.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

This isn't a bug but a design limitation. Additionally, there is a patch for that now.

So thanks for the report, but archiving as a known limitation which is being worked on.

This isn't a bug but a design limitation. Additionally, there is a patch for that now. So thanks for the report, but archiving as a known limitation which is being worked on.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47050
No description provided.